# barcode_scanner

./: .gitignore  CMakeLists.txt  barcode-scanner.service  build.sh  main.cpp  sync_rpi_sysroot.sh  toolchain-rpi4.cmake
